<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000">

    <androidx.camera.view.PreviewView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <FrameLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClose"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:layout_margin="8dp"
            android:contentDescription="@string/back"
            app:icon="@drawable/ic_back" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTorch"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_margin="8dp"
            android:checkable="true"
            android:contentDescription="@string/camera_torch"
            app:icon="@drawable/ic_bolt" />

        <View
            android:id="@+id/btnShutter"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="32dp"
            android:background="@drawable/shutter"
            android:clickable="true"
            android:contentDescription="@string/camera_shutter"
            android:focusable="true" />
    </FrameLayout>
</FrameLayout>
